[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/robo/RoboExtra.gd" type="Script" id=2]
[ext_resource path="res://ui/8Way/8Way.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 50.0
margin_bottom = 360.0

[node name="FlyDir" parent="VBoxContainer" index="0" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_bottom = 62.0
alignment = 1
NW = false
W = false

[node name="FlyEnabled" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 63.0
margin_right = 50.0
margin_bottom = 75.0
text = "Fly"
